# esquilait

./: Cargo.toml  README.md  esquilait.tape
src/: app.rs  dot_commands.rs  main.rs  repl.rs  utils.rs
src/parsers/: cells.rs  mod.rs  payload.rs  record_code.rs  records.rs  sql.rs  value.rs
src/sqlite/: cells.rs  db.rs  db_header.rs  mod.rs  pages.rs  parser.rs  records.rs  schemas.rs  tables.rs  varint.rs
